readme adaption, translation, removed sort order from backend menu

--- a/app/locale/de_DE/Netzkollektiv_EasyCredit.csv
+++ b/app/locale/de_DE/Netzkollektiv_EasyCredit.csv
@@ -1,1 +1,3 @@
 "Interest","Zinsen für Ratenzahlung"
+"Verify Credentials with easyCredit","easyCredit Zugangsdaten überprüfen"
+"New Order Status","Status neuer Bestellungen"
