improved translation for system config; added option for hiding easycredit if unavailable

--- a/src/app/locale/de_DE/Netzkollektiv_EasyCredit.csv
+++ b/src/app/locale/de_DE/Netzkollektiv_EasyCredit.csv
@@ -7,8 +7,16 @@
 "Unable to initialize easyCredit Checkout review.","ratenkauf by EasyCredit Bestellübersicht kann nicht initialisiert werden."
 "Unable to validate easyCredit Payment.","ratenkauf by easyCredit Zahlung kann nicht validiert werden."
 "Unable to start easyCredit Payment.","ratenkauf by easyCredit Zahlung kann nicht gestartet werden."
-"If activated, API call details will be saved to var/log/easycredit.log","Falls aktiviert, werden API-Aufrufe zu Debugging-Zwecken in var/log/easycredit.log geloggt."
 "Please insert your apiKey and apiToken!","Bitte geben Sie API Key und API Token an."
 "Credentials invalid. Please check your input!","Die Zugangsdaten sind nicht korrekt. Bitte überprüfen Sie API Key und API Token."
 "Credentials correct!","Die Zugangsdaten sind korrekt. Nach Speichern der Einstellungen, können Sie die Zahlungsart nun verwenden."
 "Redemption Plan","Tilgungsplan"
+"Show reason, if not available","Zeige Grund, wenn nich verfügbar"
+"Show customers the reason if ratenkauf by easyCredit is unavailable","Zeige dem Kunden, warum ratenkauf by easyCredit für seine Bestellung nicht verfügbar ist"
+"Save customer prefix","Anrede speichern"
+"ratenkauf by easyCredit asks the user to select a prefix, if not already entered. Should this prefix be saved in the customer account?","ratenkauf by easyCredit fordert den Käufer auf, eine Anrede zu wählen, sollte noch keine erfasst worden sein. Soll diese für den Käufer gespeichert werden?"
+"Show widget next to product price","Zeige Modellrechner-Widget neben Produktpreis"
+"Debug Logging","Debug Logging"
+"If active, API call details will be saved to var/log/easycredit.log","Falls aktiv, werden die API Aufrufe in var/log/easycredit.log gespeichert."
+"Specifies if ratenkauf by easyCredit will be advertised in product detail view","Bestimmt, ob Ratenkauf in der Detailansicht beworben wird (""oder mtl. ab x EUR"")"
+
