--- a/src/app/locale/de_DE/Netzkollektiv_EasyCredit.csv
+++ b/src/app/locale/de_DE/Netzkollektiv_EasyCredit.csv
@@ -4,7 +4,7 @@
 "Unfortunately, easyCredit payment cannot be offered.","Leider kann der Ratenkauf bei easyCredit nicht angeboten werden."
 "easyCredit payment has been canceled.","ratenkauf by easyCredit wurde abgebrochen."
 "Unable to initialize easyCredit Payment.","ratenkauf by easyCredit kann nicht initialisiert werden."
-"Unable to initialize easyCredit Checkout review.","ratenkauf by EasyCredit Bestellübersicht kann nicht initialisiert werden."
+"Unable to initialize easyCredit Checkout review.","ratenkauf by easyCredit Bestellübersicht kann nicht initialisiert werden."
 "Unable to validate easyCredit Payment.","ratenkauf by easyCredit Zahlung kann nicht validiert werden."
 "Unable to start easyCredit Payment.","ratenkauf by easyCredit Zahlung kann nicht gestartet werden."
 "Please insert your apiKey and apiToken!","Bitte geben Sie Webshop-ID und API Passwort an."
