--- a/src/app/locale/de_DE/Netzkollektiv_EasyCredit.csv
+++ b/src/app/locale/de_DE/Netzkollektiv_EasyCredit.csv
@@ -2,22 +2,22 @@
 "Verify Credentials with easyCredit","Zugangsdaten überprüfen"
 "New Order Status","Status neuer Bestellungen"
 "Unfortunately, easyCredit payment cannot be offered.","Leider kann der Ratenkauf bei easyCredit nicht angeboten werden."
-"easyCredit payment has been canceled.","ratenkauf by easyCredit wurde abgebrochen."
-"Unable to initialize easyCredit Payment.","ratenkauf by easyCredit kann nicht initialisiert werden."
-"Unable to initialize easyCredit Checkout review.","ratenkauf by easyCredit Bestellübersicht kann nicht initialisiert werden."
-"Unable to validate easyCredit Payment.","ratenkauf by easyCredit Zahlung kann nicht validiert werden."
-"Unable to start easyCredit Payment.","ratenkauf by easyCredit Zahlung kann nicht gestartet werden."
+"easyCredit payment has been canceled.","easyCredit-Ratenkauf wurde abgebrochen."
+"Unable to initialize easyCredit Payment.","easyCredit-Ratenkauf kann nicht initialisiert werden."
+"Unable to initialize easyCredit Checkout review.","easyCredit-Ratenkauf Bestellübersicht kann nicht initialisiert werden."
+"Unable to validate easyCredit Payment.","easyCredit-Ratenkauf Zahlung kann nicht validiert werden."
+"Unable to start easyCredit Payment.","easyCredit-Ratenkauf Zahlung kann nicht gestartet werden."
 "Please insert your apiKey and apiToken!","Bitte geben Sie Webshop-ID und API Passwort an."
 "Credentials invalid. Please check your input!","Die Zugangsdaten sind nicht korrekt. Bitte überprüfen Sie Webshop-ID und API Passwort."
 "Credentials correct!","Die Zugangsdaten sind korrekt. Nach Speichern der Einstellungen, können Sie die Zahlungsart nun verwenden."
 "Show reason, if not available","Zeige Grund, wenn nich verfügbar"
-"Show customers the reason if ratenkauf by easyCredit is unavailable","Zeige dem Kunden, warum ratenkauf by easyCredit für seine Bestellung nicht verfügbar ist"
+"Show customers the reason if easyCredit-Ratenkauf is unavailable","Zeige dem Kunden, warum easyCredit-Ratenkauf für seine Bestellung nicht verfügbar ist"
 "Save customer prefix","Anrede speichern"
-"ratenkauf by easyCredit asks the user to select a prefix, if not already entered. Should this prefix be saved in the customer account?","ratenkauf by easyCredit fordert den Käufer auf, eine Anrede zu wählen, sollte noch keine erfasst worden sein. Soll diese für den Käufer gespeichert werden?"
+"easyCredit-Ratenkauf asks the user to select a prefix, if not already entered. Should this prefix be saved in the customer account?","easyCredit-Ratenkauf fordert den Käufer auf, eine Anrede zu wählen, sollte noch keine erfasst worden sein. Soll diese für den Käufer gespeichert werden?"
 "Show widget next to product price","Zeige Modellrechner-Widget neben Produktpreis"
 "Debug Logging","Debug Logging"
 "If active, API call details will be saved to var/log/easycredit.log","Falls aktiv, werden die API Aufrufe in var/log/easycredit.log gespeichert."
-"Specifies if ratenkauf by easyCredit will be advertised in product detail view","Bestimmt, ob Ratenkauf in der Detailansicht beworben wird (""oder mtl. ab x EUR"")"
+"Specifies if easyCredit-Ratenkauf will be advertised in product detail view","Bestimmt, ob Ratenkauf in der Detailansicht beworben wird (""oder mtl. ab x EUR"")"
 "API Key","Webshop-ID"
 "API Token","API-Passwort"
 "If activated, easyCredit Ratenkauf interest rates will be not be included in order and order documents after order.","Wenn aktiviert, werden die Zinsen nach Abschluss der Bestellung entfernt und in der Bestellung und den Bestelldokumenten nicht mehr angezeigt."
