migrate extension to api v3

--- a/src/app/locale/de_DE/Netzkollektiv_EasyCredit.csv
+++ b/src/app/locale/de_DE/Netzkollektiv_EasyCredit.csv
@@ -10,16 +10,14 @@
 "Please insert your apiKey and apiToken!","Bitte geben Sie Webshop-ID und API Passwort an."
 "Credentials invalid. Please check your input!","Die Zugangsdaten sind nicht korrekt. Bitte überprüfen Sie Webshop-ID und API Passwort."
 "Credentials correct!","Die Zugangsdaten sind korrekt. Nach Speichern der Einstellungen, können Sie die Zahlungsart nun verwenden."
-"Show reason, if not available","Zeige Grund, wenn nich verfügbar"
 "Show customers the reason if easyCredit-Ratenkauf is unavailable","Zeige dem Kunden, warum easyCredit-Ratenkauf für seine Bestellung nicht verfügbar ist"
-"Save customer prefix","Anrede speichern"
-"easyCredit-Ratenkauf asks the user to select a prefix, if not already entered. Should this prefix be saved in the customer account?","easyCredit-Ratenkauf fordert den Käufer auf, eine Anrede zu wählen, sollte noch keine erfasst worden sein. Soll diese für den Käufer gespeichert werden?"
 "Show widget next to product price","Zeige Modellrechner-Widget neben Produktpreis"
 "Debug Logging","Debug Logging"
 "If active, API call details will be saved to var/log/easycredit.log","Falls aktiv, werden die API Aufrufe in var/log/easycredit.log gespeichert."
 "Specifies if easyCredit-Ratenkauf will be advertised in product detail view","Bestimmt, ob Ratenkauf in der Detailansicht beworben wird (""oder mtl. ab x EUR"")"
 "API Key","Webshop-ID"
 "API Token","API-Passwort"
+"API Signature (optional)","API-Signatur (optional)"
 "If activated, easyCredit Ratenkauf interest rates will be not be included in order and order documents after order.","Wenn aktiviert, werden die Zinsen nach Abschluss der Bestellung entfernt und in der Bestellung und den Bestelldokumenten nicht mehr angezeigt."
 "Remove interest after order","Zinsen nach Bestellabschluss entfernen"
 "Shipping Method","Versandart"
